Fix spacing of items in side bar

--- a/css/styles.css
+++ b/css/styles.css
@@ -193,7 +193,7 @@ li:hover,
     color:white;
     display: grid;
     align-items: center;
-    grid-template-rows: 2fr repeat(7, 1fr) 2fr repeat(3, 1fr);
+    grid-template-rows: 2fr repeat(7, 1fr) 4fr repeat(3, 1fr);
     padding-left: 1.5rem;
 }
 
@@ -216,7 +216,7 @@ li:hover,
 }
 
 .title {
-    padding-bottom: 1.8rem;
+    padding-bottom: 1rem;
 }
 
 .title .icon {
